--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('org.springframework.integration:spring-integration-file')
 	compile("org.springframework.boot:spring-boot-starter-data-redis")
+	compile('com.auth0:java-jwt:3.3.0')
+	compile('com.auth0:jwks-rsa:0.3.0')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
