--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-data-redis")
 	compile('com.auth0:java-jwt:3.3.0')
 	compile('com.auth0:jwks-rsa:0.3.0')
+	compile('com.auth0:auth0:1.3.1')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
