--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 auth0.domain=https://bkrebs.auth0.com/
 auth0.clientId=Y9ewnKjvAHkHfedDP0SY7WYplFfn7Dzx
 auth0.clientSecret=Y4g6uKxRqMkEG3pgIj1OVOt8DXfmkl3Gd7-uRQHkyfX5auHjyJ6IVZvZcA5KXk_x
+redis.url=redis://localhost
+redis.channel=messaging-channel
